<resources>
    <string name="app_name" translatable="false">MyGithubUser</string>
    <string name="dummy_name" translatable="false">Ari Angga Nugraha</string>
    <string name="dummy_username" translatable="false">nugrahaa878</string>
    <string name="dummy_location" translatable="false">Depok, Indonesia</string>
    <string name="about_me">About</string>
    <string name="username" translatable="false">Username :</string>
    <string name="dummy_company" translatable="false">Universitas Indonesia</string>
    <string name="dummy_repo" translatable="false">23</string>
    <string name="dummy_follower" translatable="false">123</string>
    <string name="username_title" translatable="false">Username</string>
    <string name="company_title" translatable="false">Company</string>
    <string name="location_title" translatable="false">Location</string>
    <string name="repository_title">Repository</string>
    <string name="follower_title">Follower</string>
    <string name="following_title">Following</string>
    <string name="go_to_github">Go to Github</string>
    <string name="search">search</string>
    <string name="this_is" translatable="false">Ini tab ke </string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="empty">Empty</string>

    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>

    <string-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </string-array>

    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <string-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </string-array>

    <string-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </string-array>

    <string-array name="avatar">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
    </string-array>

    <string-array name="link">
        <item>https://github.com/JakeWharton</item>
        <item>https://github.com/amitshekhariitbhu</item>
        <item>https://github.com/romainguy</item>
        <item>https://github.com/chrisbanes</item>
        <item>https://github.com/tipsy</item>
        <item>https://github.com/ravi8x</item>
        <item>https://github.com/jasoet</item>
        <item>https://github.com/budioktaviyan</item>
        <item>https://github.com/hendisantika</item>
        <item>https://github.com/sidiqpermana</item>
    </string-array>

    <string name="total_repository">Repository :</string>
    <string name="id" translatable="false">User ID&#160;&#160;&#160;&#160;&#160;&#160;&#160;:</string>
    <string name="follower">Follower :</string>
    <string name="following_detail"> Following :</string>
    <string name="change_language_settings">Change Language</string>

</resources>
