<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd= "16dp"
        android:layout_marginRight="16dp"
        tools:src="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/img_item_photo"
        android:layout_toRightOf="@+id/img_item_photo"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:text="@string/dummy_name"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp"
            >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_username"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="4dp" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/dummy_location"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>